# perception-network-status

./: .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  perception-network-status.wasi-browser.js  perception-network-status.wasi.cjs  pnpm-lock.yaml  test.js
.github/workflows/: CI.yml
.trae/rules/: trae.md
native/: CNetworkListManagerEvents.cpp  CNetworkListManagerEvents.h  NetworkMonitor.cpp  Utils.cpp  Utils.h
src/: global.rs  lib.rs  messages.rs  monitor.rs  network.rs  network_quality.rs  wlan.rs
