
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "perception_network_status"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
napi = "3.0.0"
napi-derive = "3.0.0"
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_NetworkListManager",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
